# APP-SERVI-OS-

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0bbedda6eb75_fases_2_5_schema.py  13df944a4c96_fase_6_pagamentos.py  77994af88f5c_fase_10_audit_logs.py  97f05332028e_fase_7_reviews.py  a1b2c3d4e5f6_fase_37_user_blocks.py  a3b4c5d6e7f8_fase_20_login_social.py  a5b6c7d8e9f0_fase_31_kyc.py  a7b8c9d0e1f2_fase_17_user_avatar.py  a9b0c1d2e3f4_fase_25_sprint_idea_origem.py  b0c1d2e3f4a5_fase_26_user_birth_date.py  b2c3d4e5f6a7_fase_12_error_logs.py  b2c3d4e5f6a7_fase_38_review_reply.py  b5c6d7e8f9a0_fase_21_payment_settings.py  b6c7d8e9f0a1_fase_32_category_image.py  b8c9d0e1f2a3_fase_18_contact_deadline.py  c1d2e3f4a5b6_fase_27_push_subscriptions.py  c3d4e5f6a7b8_fase_13_chat_media.py  c6d7e8f9a0b1_fase_22_sprints.py  c7d8e9f0a1b2_fase_33_reports.py  cf527ea2ad60_fase_9_gamificacao.py  (+25 more)
backend/app/: __init__.py  main.py  seeds.py
backend/scripts/: __init__.py  backfill_category_groups.py  create_admin.py  promote_admin.py
backend/tests/: test_admin.py  test_auth.py  test_categories.py  test_chat.py  test_credits_purchases.py  test_gamification.py  test_google_login.py  test_health.py  test_leads.py  test_manual_pix.py  test_mercadopago.py  test_new_features.py  test_payments.py  test_reviews.py  test_service_confirmation.py  test_sprints.py  test_users.py
(+455 files in other folders)
