[project]
name = "trampoja-backend"
version = "0.1.0"
description = "TrampoJá API — backend FastAPI do marketplace de serviços locais."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.35",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pyjwt>=2.10,<3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "redis>=5.2,<6.0",
    "boto3>=1.35,<2.0",
    "python-multipart>=0.0.12,<0.1",
    "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.26",
    "ruff>=0.7,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
